# AutoRCA-Core

./: .gitignore  CONTRIBUTING.md  FEATURE_OPPORTUNITIES.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
autorca_core/: __init__.py  config.py  logging.py  validation.py
autorca_core/cli/: __init__.py  __main__.py
autorca_core/graph_engine/: __init__.py  builder.py  queries.py
autorca_core/ingestion/: __init__.py  configs.py  logs.py  metrics.py  traces.py
autorca_core/mcp/: __init__.py  server.py
autorca_core/model/: __init__.py  events.py  graph.py
autorca_core/outputs/: __init__.py  reports.py
autorca_core/reasoning/: __init__.py  llm.py  loop.py  rules.py
docs/: MCP_INTEGRATION.md  architecture.md  examples.md
examples/basic_logs/: sample_logs.jsonl
examples/quickstart_local_logs/: README.md  logs.jsonl  metrics.jsonl
src/adapt_rca/: __init__.py  cli.py  config.py
src/adapt_rca/graph/: __init__.py  causal_graph.py
src/adapt_rca/ingestion/: __init__.py  file_loader.py
src/adapt_rca/parsing/: __init__.py  log_parser.py
src/adapt_rca/reasoning/: __init__.py  agent.py  heuristics.py
src/adapt_rca/reporting/: __init__.py  exporters.py  formatter.py
tests/: __init__.py  test_parsing.py  test_quickstart.py  test_reasoning.py
